# filedate-rs

./: .gitlab-ci.yml  Cargo.toml  README.md  file8601.code-workspace  filedate.code-workspace
.github/workflows/: build_all.yml  workflow_build_manual.yml
src/: LIBRARY.md  README_DESIGN.md  benchmark.rs  bin.rs  dates.rs  delete_me.txt  full_struct.rs  lib.rs  stamp.rs
tests/: dates.rs  integration.rs
